// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unzipChunk can unzip bgzip-1.txt.gz 1`] = `
Array [
  0,
  22579,
  87646,
  152675,
  217701,
  282681,
  287762,
]
`;

exports[`unzipChunk can unzip bgzip-1.txt.gz 2`] = `
Array [
  0,
  4682,
  24403,
  43638,
  62447,
  82222,
  84033,
]
`;

exports[`unzipChunkSlice can unzip bgzip-1.txt.gz 1`] = `
Array [
  0,
  22579,
]
`;

exports[`unzipChunkSlice can unzip bgzip-1.txt.gz 2`] = `
Array [
  0,
  4682,
]
`;

exports[`unzipChunkSlice can unzip bgzip-1.txt.gz positive maxv.blockPosition 1`] = `
Array [
  50,
  22579,
  87646,
]
`;

exports[`unzipChunkSlice can unzip bgzip-1.txt.gz positive maxv.blockPosition 2`] = `
Array [
  0,
  4682,
  24403,
]
`;

exports[`unzipChunkSlice can unzip bgzip-1.txt.gz positive minv.dataPosition 1`] = `
Array [
  50,
  22579,
]
`;

exports[`unzipChunkSlice can unzip bgzip-1.txt.gz positive minv.dataPosition 2`] = `
Array [
  0,
  4682,
]
`;
